# ComputerGraphics_LearningOpenGL

./: CMakeLists.txt  README.md
000_CmakeStudy/: CMakeLists.txt  main.cpp  main2.cpp
000_CmakeStudy/funcs/: CMakeLists.txt  func.cpp
002_GLFW_WINDOW/: CMakeLists.txt  main.cpp
003_OpenGL_TryFunctions/: main.cpp
004_OpenGL_ErrorChecker/: CMakeLists.txt  main.cpp
009_OpenGL_DrawArray/: main.cpp
011_OpenGL_ColorfulTriangle/: CMakeLists.txt  main.cpp
012_OpenGL_ShaderClass/: CMakeLists.txt
014_OpenGL_Exercise-1/: CMakeLists.txt
017_OpenGL_Texture/: CMakeLists.txt
018_OpenGL_Texture-Exercise-1/: main.cpp
019_OpenGL_Texture-Class/: main.cpp
021_OpenGL_Texture-Mipmap-Test/: CMakeLists.txt
022_OpenGL_Texture-Mipmap-ShaderTest/: CMakeLists.txt
023_OpenGL_Texture-Mipmap-Auto/: CMakeLists.txt  main.cpp
024_OpenGL_GLM_Transform/: main.cpp
025_OpenGL_GLM_SeniorTransform/: main.cpp
026_OpenGL_ViewMatrix/: main.cpp
029_OpenGL_CameraSystem/: main.cpp
032_OpenGL_Diffuse/: main.cpp
033_OpenGL_Specular/: CMakeLists.txt  main.cpp
034_OpenGL_NormalMatrix/: CMakeLists.txt  main.cpp
035_OpenGL_Struct/: main.cpp
036_OpenGL_StructDemo/: main.cpp
037_OpenGL_SpecularMask/: main.cpp
038_OpenGL_PointLight/: main.cpp
044_OpenGL_ParentAndChildren/: CMakeLists.txt  main.cpp
044_OpenGL_ParentAndChildren/application/: Application.h
044_OpenGL_ParentAndChildren/assets/shaders/: phong.frag
044_OpenGL_ParentAndChildren/glframework/: core.h  object.cpp  object.h
044_OpenGL_ParentAndChildren/glframework/light/: ambientLight.h
044_OpenGL_ParentAndChildren/glframework/material/: material.h
044_OpenGL_ParentAndChildren/glframework/renderer/: renderer.cpp  renderer.h
(+119 files in other folders)
